# di504

./: .gitignore  1_preprocess_data.ipynb  2_train.ipynb  pyproject.toml
data/: data.csv
